--- a/HellBot Launcher/pom.xml
+++ b/HellBot Launcher/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.halot.nikitazolin</groupId>
   <artifactId>hell-bot-launcher</artifactId>
-  <version>0.0.2</version>
+  <version>0.0.3</version>
   <name>HellBot Launcher</name>
   <description>Easy managing HellBot application</description>
 
@@ -21,6 +21,35 @@
       <version>1.18.32</version>
       <scope>provided</scope>
     </dependency>
+
+    <!-- Web -->
+    <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>3.9.0</version>
+    </dependency>
+    <!-- /Web -->
+
+    <!-- File parser -->
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.17.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20240303</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>2.2</version>
+    </dependency>
+    <!-- /File parser -->
 
     <!-- LOG -->
     <dependency>
